Users integration and UI consistency changes

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -21,14 +21,14 @@ pre {
 a {
   color: #000;
 
-  &:visited {
+  /*&:visited {
     color: #666;
   }
 
   &:hover {
     color: #fff;
     background-color: #000;
-  }
+  }*/
 }
 
 div {
