--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Product</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<h2 class="text-info">Edit Product</h2>
+<br />
+<div class="row">
+	<div class="col-md-12">
+		<%= render 'form' %>
+		
+		<%= link_to 'Show', @product %> |
+		<%= link_to 'Back', products_path %>
+	</div>
+</div>
