--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ProductGrabber</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <%= yield(:head) %>
+  <title>Product Grabber</title>
+  
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<link rel="icon" type="image/png" href="../favicon.png">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/index.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
+	
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">ProductGrabber</a>
+			</div>
+	
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/#about">About</a></li>
+					<li><a href="/#howItWorks">How it works</a></li>
+					<li><a href="/#products">Products</a></li>
+					<li><a href="https://github.com/scalableinternetservices/ProductGrabber" target="_blank">GitHub</a></li>
+					<li><a href="https://www.pivotaltracker.com/n/projects/1446080" target="_blank">Pivotal</a></li>
+					
+					<% if current_user.nil? %> 
+						<li><a href="/login">Log In</a></li>
+					<% else %>
+					   <li class="dropdown">
+					   		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+					   	
+						   <ul class="dropdown-menu">
+						   		<li><%= link_to "View Profile", @current_user%></li>
+						   		<li><%= link_to "Log out", logout_path, method: "delete" %></li>
+						   </ul>
+					   </li>
+					<% end %>
+					
+				</ul>
+			</div>
+		</div>
+	</nav>
+	
+	
+	<div id="main-content-container" class="container">
+		
+		<div class="bluebar visible-lg-block visible-md-block"></div>
+		
+		<div id="main-content">
+			
+			<%= yield %>
 
-<%= yield %>
+		</div>
+		
+		<div id="footer">
+			<p>© 2015 ProductGrabber Team&nbsp;&nbsp;|&nbsp;&nbsp;
+			<a href="#attributions-modal" data-toggle="modal" data-target="#attributions-modal">Attributions</a></p>
+			<p></p>
+		</div>
+		
+		<div id="attributions-modal" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">Attributions</h4>
+					</div>
+					<div class="modal-body">
+						<ol>
+							<li><div>Favicon by <a href="http://flaticons.net/" title="Flaticon">Flaticon</a> (Royalty free).</div></li>
+						</ol>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </body>
 </html>
