--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 #main-content-container .bluebar {
-	border: 3px solid skyblue;
+	border: 3px solid #87CEEB;
 	margin: 0px -26px;
 	position: fixed;
 	left: auto;
@@ -20,7 +20,7 @@ body {
 #main-content .view-section {
 	padding-top: 50px;
 	padding-bottom: 20px;
-	border-top: 1px solid skyblue;
+	border-top: 1px solid #87CEEB;
 }
 
 #main-content .view-section .view-section-details {
@@ -30,7 +30,7 @@ body {
 #footer {
 	text-align: center;
 	padding: 3px;
-	background-color: skyblue;
+	background-color: #87CEEB;
 	color: black;
 	margin: 5px -25px -5px;
 	font-weight: bold;
