--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -65,9 +65,19 @@
 					  <%= @product.description %>
 					</p>
 
+			  <% if !current_user.find_product(@product.id) %>
+				  <%= link_to 'Add', favorites_path(product_id: @product), method: 'post'%> |
+			  <% else %>
+				  <%= link_to 'Dislike', favorite_path(current_user.like_product(@product.id)), method: 'delete'%> |
+			  <% end %>
+			  <%= link_to 'Add to Cart', line_items_path(product_id: @product), method: 'post'%>
+			  <p>liked by <%= @product.favorites.count %> customers</p>
 
-					<%= link_to 'Edit', edit_product_path(@product) %> |
+
+			  <%= link_to 'Edit', edit_product_path(@product) %> |
 					<%= link_to 'Back', products_path %>
+			  <br>
+			  <%= link_to 'Enter my Collections', @current_user %>
 
 			</div>
 		</div>
