--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -114,6 +114,10 @@
 		<% end %>
 		<!-------- add user login\out button ------------->
 
+		<div class="col-sm-2 view-section-details">
+		  <h3><%= link_to 'Manage my cart',carts_path,method: 'post', :class => 'button btn btn-primary' %></h3>
+		</div>
+
 	  </div>
 
 
