Make carts belong to specific users. Not destroyed after logging out.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,8 @@
-<h2 class="text-info">Show Product</h2>
 <br />
+
+  <p><h3><%= link_to 'Manage my cart',carts_path,method: 'post', :class => 'button btn btn-primary' %></h3></p>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
