--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -11,7 +11,6 @@
 <% end %>
 
 <ul>
-
   <% @cart.sort_items.each do |item| %>
 
       <br /><br />
@@ -34,11 +33,12 @@
         </div>
       </div>
   <% end %>
-
-  <br>
-  <br>
+  <br /><br />
+  <div class="row view-section">
+  </div>
+</ul>
 
   <%= link_to 'Empty cart', @cart, method: 'delete', confirm: 'Are you sure?',:class => 'button btn btn-primary' %>
   <%= link_to 'Continue adding products', products_path, method: 'get',:class => 'button btn btn-primary' %>
 
-</ul>
+<br /><br />
