--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,8 +1,8 @@
 <h2 class="text-info">Your Cart</h2>
 <br />
 
-<%= link_to 'Ranked by price',price_sort_cart_path(@cart), :class => 'button btn btn-primary' %>
-<%= link_to 'Ranked by like',like_sort_cart_path(@cart), :class => 'button btn btn-primary' %>
+<%= link_to 'Sort by price',price_sort_cart_path(@cart), :class => 'button btn btn-primary' %>
+<%= link_to 'Sort by like',like_sort_cart_path(@cart), :class => 'button btn btn-primary' %>
 
 <br /><br />
 
@@ -10,10 +10,10 @@
     <p id="notice"><%= notice %></p>
 <% end %>
 
-<ul>
+
   <% @cart.sort_items.each do |item| %>
 
-      <br /><br />
+      <br />
       <div class="row view-section">
         <div class="col-sm-3">
           <strong><%= @cart.count %></strong>
@@ -23,22 +23,17 @@
           <h3><%= link_to item.product.name, item.product %></h3>
           <p class="text-danger"><strong><%= number_to_currency(item.product.price) %></strong></p>
           <% if !current_user.find_product(item.product.id) %>
-              <%= link_to 'Add', favorites_path(product_id: item.product), method: 'post'%> |
+              <%= link_to 'Like', favorites_path(product_id: item.product), method: 'post'%>
           <% else %>
-              <%= link_to 'Dislike', favorite_path(current_user.like_product(item.product.id)), method: 'delete' %> |
+              <%= link_to 'Remove like', favorite_path(current_user.like_product(item.product.id)), method: 'delete' %>
           <% end %>
-          <p>liked by <%= item.product.favorites.count %> customers</p>
+          <p><%= item.product.favorites.count %> likes</p>
 
           <%=link_to "Remove from my cart", line_item_path(item), method: 'delete'%>
         </div>
       </div>
   <% end %>
-  <br /><br />
-  <div class="row view-section">
-  </div>
-</ul>
+  <br />
 
   <%= link_to 'Empty cart', @cart, method: 'delete', confirm: 'Are you sure?',:class => 'button btn btn-primary' %>
   <%= link_to 'Continue adding products', products_path, method: 'get',:class => 'button btn btn-primary' %>
-
-<br /><br />
