--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,11 @@
 					<% if current_user.nil? %> 
 						<li><a href="/login">Log In</a></li>
 					<% else %>
+					   <li>
+					   		<%= link_to carts_path,method: 'post' do %>
+							    <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Cart
+							<% end %>
+					   </li>
 					   <li class="dropdown">
 					   		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
 					   	
