--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for @product, html: { multipart: true } do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -24,14 +24,14 @@
     <%= f.text_area :description, class: "form-control" %>
   </div>
   <div class="field">
-    <%= f.label :photo %><br>
-    <%= f.text_field :photo, class: "form-control" %>
+     <%= f.label :photo %>
+     <%= f.file_field :photo %>
   </div>
   <div class="actions">
-    <%= f.submit :Update, class: "btn btn-primary" %>
+    <%= f.submit :Submit, class: "btn btn-primary" %>
   </div>
 <% end %>
 
 <script>
-	$("title").text("Edit product");
+	$("title").text("Create product");
 </script>
